# Stable

./: libs.sln
Resources/atlases/: ColorSliders6Cut.psd  Interface_v.002.psd  Interface_v.003.psd  checkbox.atlas  gui.atlas
Resources/atlases/checkbox/: CheckBox_01.psd  CheckBox_02.psd  CheckBox_03.psd  CheckBox_04.psd  CheckBox_05.psd  CheckBox_06.psd  CheckBox_07.psd  CheckBox_08.psd  CheckBox_09.psd
Resources/desc/test/: PARTICLES.DESC  TERNARYOPERATOR.DESC  audio.desc  categories.desc  chainSpawners.desc  collection.desc  complexObjectSpawners.desc  complexObjects.desc  constant.desc  crossObjectsRef.desc  defaultParameters.desc  defaultProperties.desc  inheritance.desc  links.desc  links2.desc  logicalOOperators.desc  mathOperator.desc  objectArray.desc  property.desc  (+5 more)
Resources/glsl/: retouch.glsl  simple.fs  simple.glsl  simple.vs
Sources/Libraries/: CMakeLists.txt  stdafx.h
Sources/Libraries/commonAppModules/: CMakeLists.txt  _defaultModule.h  autorun.cpp  autorun.h  camera.cpp  camera.h  cameraCreator.cpp  cameraCreator.h  commandProcessor.h  commonAppModules.vcxproj  commonAppModules.vcxproj.filters  componentModel.cpp  componentModel.h  componentModelHelpers.cpp  componentModelHelpers.h  console.cpp  console.h  crtMemDebugger.cpp  crtMemDebugger.h  debugDrawing.cpp  debugDrawing.h  debugDrawingFlusher.cpp  debugDrawingFlusher.h  dragNDrop.cpp  dragNDrop.h  fbx.h  freeimage.h  imgui.cpp  imgui.h  imguiApp.cpp  imguiApp.h  ipc.cpp  ipc.h  jni.cpp  jni.h  library.include.h  lightSources.cpp  lightSources.h  locale.h  logs.h  (+44 more)
Sources/Libraries/commonAppModules/d3d11/: direct3d11.cpp  direct3d11.h
Sources/Libraries/commonAppModules/d3d9/: direct3d9.cpp  direct3d9.h
Sources/Libraries/commonAppModules/opengl/: opengl.cpp  opengl.h
Sources/Libraries/commonAppModules/opengles/: opengles.cpp  opengles.h
(+1766 files in other folders)
